--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -7,7 +7,7 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
+          <li class="nav-item" *ngIf="!auth.loggedIn">
               <a class="nav-link" routerLink="/login">Login</a>
           </li>
           <li class="nav-item">
