--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -6,6 +6,10 @@
             <label for="exampleInputPassword1">Username</label>
             <input type="text" class="form-control" formControlName="username" id="exampleInputPassword1" placeholder="Username">
         </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" formControlName="password" id="exampleInputPassword1" placeholder="Username">
+        </div>
         <button type="submit" class="btn btn-primary" [disabled]='!rForm.valid'>Login</button>
     </form>
     <h1 *ngIf="loggedIn">Hello {{ user.username }}</h1>
