--- a/frontend/src/app/registration/registration.component.html
+++ b/frontend/src/app/registration/registration.component.html
@@ -3,8 +3,13 @@
       <form [formGroup]="rForm" (ngSubmit)="register(rForm.value)" class="mt-5">
           
           <div class="form-group">
-              <label for="exampleInputPassword1">Username</label>
-              <input type="text" class="form-control" formControlName="username" id="exampleInputPassword1" placeholder="Username">
+              <label for="username">Username</label>
+              <input type="text" class="form-control" formControlName="username" id="username" placeholder="Username">
+          </div>
+
+          <div class="form-group">
+              <label for="password">Password</label>
+              <input type="password" class="form-control" formControlName="password" id="password" placeholder="Username">
           </div>
   
           <div class="form-group">
